--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -53,8 +53,7 @@ include ../../blocks/stars/stars.pug
             span(class='slide' id='slide')
                 a(href='#')
                     i(class='fa fa-arrow-right')
-            .wrapper_content
-                .content
+            .right-side__content
                     +card-room('carousel', [require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg')], 888, '9  990₽', 'в сутки', 145, 'Отзывов',  'room-card__decor')
                         +stars('--rating: 5')
                     +card-room('carousel1', [require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg')], 840,'9  900₽', 'в сутки', 65 , 'Отзывов', 'room-card__decor')
