--- a/src/blocks/calculator/calculator.pug
+++ b/src/blocks/calculator/calculator.pug
@@ -16,10 +16,12 @@ mixin calculator(roomNumber, pricePerDay, day, checkin, checkout, titleDropdown,
             p(class='title')= titleDropdown
             div(class='calculator__dropdown')
                 +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
-            div(class='flex-row calculator__price')
+            div(class='calculator__price')
                 div(class='flex-row price__count')
-                    p(class='calculator__text')= calculationOfThePrice
-                    p(class='calculator__text')= fullPrice
+                    div
+                        p(class='calculator__text')= calculationOfThePrice
+                    div
+                        p(class='calculator__text')= fullPrice
             div(class='flex-row calculator__price')
                 div(class='row')
                     p(class='calculator__text')= tax
@@ -30,7 +32,7 @@ mixin calculator(roomNumber, pricePerDay, day, checkin, checkout, titleDropdown,
                 div(class='row')
                     p(class='calculator__text')= addTax
                     div
-                        span(class='price__info.price__info_extra') i
+                        span(class='price__info price__info_extra') i
                 p(class='calculator__text')= additionalTax
             h3(class='calculator__total-price')= totalPrice
             button(type='button' class='btn btn-confirm')= button
