--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -127,9 +127,9 @@
         &__items {
           padding: 0;
           & > .items__item {
-            margin: 9px 0;
+            padding: 10px 0;
             & > .item__name {
-              font-size: 1.4rem;
+              font-size: 1.3rem;
               color: #1f2041;
             }
           }
