--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -63,20 +63,27 @@
       padding: 15px 5px;
     }
     &__text {
-      margin: 0 auto;
       margin-top: 20px;
+    }
+    &__offer {
+      font-size: 16px;
+      margin-left: 10px;
     }
   }
 }
 
 @media only screen and (max-width: 400px) {
   .signup {
+    width: 310px;
     &__container {
       padding: 15px 5px;
     }
     &__text {
-      margin: 0 auto;
       margin-top: 20px;
+      font-size: 16px;
+    }
+    & .btn__signin{
+      margin: 0 auto;
     }
   }
 }
