--- a/src/pages/search-page/search-page.scss
+++ b/src/pages/search-page/search-page.scss
@@ -1,4 +1,4 @@
-.main-background-search {
+.search__background {
   width: 100%;
   max-height: 1300px;
   background-image: url(../../components/images/image.jpg);
@@ -6,10 +6,6 @@
   background-size: cover;
   padding-top: 100px;
   padding-left: 192px;
-}
-
-.clear {
-  clear: both;
 }
 
 .slogan {
@@ -21,8 +17,14 @@
   color: rgba(31, 32, 65, 0.75);
 }
 
+@media only screen and (max-width: 1500px) {
+  .slogan {
+    left: 50%;
+  }
+} 
+
 @media only screen and (max-width: 900px) {
-  .main-background-search {
+  .search__background {
     padding-top: 20px;
     padding-left: 10px;
     padding-bottom: 20px;
@@ -34,7 +36,7 @@
 }
 
 @media only screen and (max-width: 400px) {
-  .main-background-search {
+  .search__background {
     padding-top: 20px;
     padding-left: 5px;
     padding-bottom: 20px;
