--- a/src/pages/signin-page/signin-page.pug
+++ b/src/pages/signin-page/signin-page.pug
@@ -12,7 +12,7 @@ html
       +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
       .header__btn_signup
         +button-signup('Зарегистрироватьcя', 'signup-page.html')
-    .main-background
+    .signin__background
       +form-signin('Войти', 'Нет аккаунта на Toxin?')
     +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
     'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
