--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import "../components/variables.scss";
+
 html,
 body {
   padding: 0;
@@ -119,7 +119,7 @@ hr {
   line-height: 15px;
   text-transform: uppercase;
   text-decoration: none;
-  color: $black-title;
+  color: #1F2041;
   text-align: left;
   display: inline-block;
   width: 100%;
@@ -138,7 +138,7 @@ hr {
   font-weight: normal;
   font-size: 1.1rem;
   letter-spacing: 0;
-  color: $black-color;
+  color: #000000;
   display: flex;
   font-size: 14px;
   margin-top: 12px;
@@ -158,7 +158,7 @@ hr {
 .input-date {
   width: 150px;
   height: 44px;
-  border: 1px solid $light-black-color;
+  border: 1px solid rgba(31, 32, 65, 0.5);
   box-sizing: border-box;
   border-radius: 4px;
   display: block;
