--- a/src/components/input-text/input-text.scss
+++ b/src/components/input-text/input-text.scss
@@ -23,11 +23,12 @@
   }
 }
 
-@media only screen and (max-width: 600px) {
-  .input-text {
-    width: 440px;
-  }
-}
+// @media only screen and (max-width: 600px) {
+//   .input-text {
+//     max-width: 440px;
+//   }
+// }
+
 
 @media only screen and (max-width: 450px) {
   .input-text {
