--- a/src/components/form-register/form-register.pug
+++ b/src/components/form-register/form-register.pug
@@ -7,25 +7,25 @@ mixin form-register(title, birthday,  data, offer, button, login)
   div(class='signup')
     div(class='signup__container')
         h1( class='title-main')= title
-        div(class='signup__input_name')
-        +input-text('Имя')
-        div(class='signup__input_surname')
-        +input-text('Фамилия')
+        div(class='signup__input signup__input_name')
+          +input-text('Имя')
+        div(class='signup__input signup__input_surname')
+          +input-text('Фамилия')
 
         div(class="row signup__radio-buttons")
           +radio-button('radio-button1', 'Мужчина')
           div(class="signup__radio-buttons_woman")
             +radio-button('radio-button2', 'Женщина')
 
-        div(class='signup__input_birthday')
+        div(class=' signup__input signup__input_birthday')
           div(class='title signup__title')= birthday
           +input-text('ДД.ММ.ГГГГ')
         
-        div(class='signup__input_data')
+        div(class='signup__input signup__input_data')
           div(class='title signup__title')= data
           +input-text('Email')
 
-        div(class='signup__input_data_password')
+        div(class='signup__input signup__input_data_password')
           +input-text('Пароль')
 
         .row
