--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -60,7 +60,8 @@
 @media only screen and (max-width: 600px) {
   .signup {
     &__container {
-      padding: 15px 5px;
+      padding: 15px 55px;
+      text-align: center;
     }
     &__text {
       margin-top: 20px;
@@ -68,6 +69,39 @@
     &__offer {
       font-size: 16px;
       margin-left: 10px;
+    }
+    &__input {
+      & > .input-text {
+        width: 400px;
+      }
+    }
+    & .btn-confirm{
+      width: 400px;
+    }
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .signup {
+    width: 450px;
+    &__container {
+      padding: 15px 25px;
+      text-align: left;
+    }
+    &__input {
+      width: 400px;
+    }
+    &__text {
+      margin-top: 20px;
+    }
+    &__offer {
+      font-size: 16px;
+      margin-left: 10px;
+    }
+    &__input {
+      & > .input-text {
+        width: 400px;
+      }
     }
   }
 }
@@ -77,13 +111,22 @@
     width: 310px;
     &__container {
       padding: 15px 5px;
+      text-align: left;
     }
     &__text {
       margin-top: 20px;
       font-size: 16px;
     }
-    & .btn__signin{
+    & .btn__signin {
       margin: 0 auto;
+    }
+    &__input {
+      & > .input-text {
+        width: 290px;
+      }
+    }
+    & .btn-confirm{
+      width: 290px;
     }
   }
 }
